revisao disttribuicao binomial

--- a/estatistica_2/Curso_de_Estatística_Parte_2.ipynb
+++ b/estatistica_2/Curso_de_Estatística_Parte_2.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -517,16 +517,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8320987112741390144276341183223364380754172606361245952449277696409600000000000000"
+       "120"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
     "    else:\n",
     "        return n * fat(n-1)\n",
     "    \n",
-    "fat(60)"
+    "fat(5)"
    ]
   },
   {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -657,24 +657,22 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.float64(50063860.0)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Com 60 números são possíveis 50,063,860.00 combinações.\n"
+     ]
     }
    ],
    "source": [
     "combinacoes = comb(60, 6)\n",
-    "combinacoes "
+    "combinacoes \n",
+    "print(f'Com 60 números são possíveis {combinacoes:,.2f} combinações.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -686,19 +684,17 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'0.000000019974489'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A chance de acerto de 6 números em 50,063,860.00 combinações possíveis é de: 0.000000019974489%\n"
+     ]
     }
    ],
    "source": [
+    "# A probabilidade de acerto se da da divisão de 1 pela quantidade de combinações possíveis.\n",
     "probabilidade = 1 / combinacoes\n",
-    "f'{probabilidade:.15f}'"
+    "print(f'A chance de acerto de 6 números em {combinacoes:,.2f} combinações possíveis é de: {probabilidade:.15f}%')"
    ]
   },
   {
@@ -775,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -792,7 +788,7 @@
        "10"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -871,7 +867,7 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +875,7 @@
    "source": [
     "num_alternativas_questao = 3\n",
     "p = 1 / num_alternativas_questao\n",
-    "p"
+    "p #probabilidade de sucesso"
    ]
   },
   {
@@ -894,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -911,14 +907,14 @@
        "0.6666666666666667"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "q = 1 - p\n",
-    "q "
+    "q #probabilidade de fracasso"
    ]
   },
   {
@@ -933,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -950,7 +946,7 @@
        "5"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -992,6 +988,7 @@
     }
    ],
    "source": [
+    "# Solução manual aplicando a formula no python.\n",
     "prob = (comb(n, k) * (p ** k) * (q ** (n - k)))\n",
     "print(f'A probabilidade de acerto de 5 perguntas é de: {prob:.8f}%')"
    ]
@@ -1009,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1020,15 +1017,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade de acerto de 5 perguntas é de: 0.13656455%\n"
+      "A probabilidade de acerto de 5 perguntas é de: 13.66%\n"
      ]
     }
    ],
    "source": [
+    "# Solução utilizando a função binom do scipy.stats\n",
     "from scipy.stats import binom\n",
     "\n",
-    "prob2 = binom.pmf(k, n, p)\n",
-    "print(f'A probabilidade de acerto de 5 perguntas é de: {prob2:.8f}%')"
+    "prob2 = binom.pmf(k, n, p) * 100\n",
+    "print(f'A probabilidade de acerto de 5 perguntas é de: {prob2:.2f}%')"
    ]
   },
   {
@@ -1072,28 +1070,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade de passar: 0.21312808%\n"
+      "A probabilidade de passar: 21.31%\n"
      ]
     }
    ],
    "source": [
+    "# É a soma das propabilidades de aprovação.\n",
     "soma = 0\n",
     "for i in range(k, n + 1):\n",
     "    soma += binom.pmf(i, n, p)\n",
-    "\n",
-    "print(f'A probabilidade de passar: {soma:.8f}%')"
+    "soma *= 100\n",
+    "print(f'A probabilidade de passar: {soma:.2f}%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1120,33 +1119,36 @@
        "np.float64(0.21312808006909523)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Usando binom.cdf\n",
+    "# Se a quantidade minima é 5 para passar, então a soma da probabilidade de k = [5,6,7,8,9,10] retorna a probabilidade total de ser aprovado. O binom.cdf calcula a distribuição cumulativa. Usando apenas o binom.cdf com k=4, obtemos o resultado culmulativo de probabilidade de acertar até 4 questões, ou seja, ele calcula a probabilidade de sucesso cumulativo de [0,1,2,3,4]. Como nosso objetico é acertar 5 ou mais questões, utilizamos o (1-) antes do binom.cdf para obter o resultado que queremos.\n",
     "1 - binom.cdf(4, n, p) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.21312808006909525)"
+       "np.float64(21.312808006909524)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "binom.sf(4, n, p) "
+    "# O binom.sf é a forma abrevidada do binom.cdf\n",
+    "binom.sf(4, n, p) * 100"
    ]
   },
   {
@@ -1162,47 +1164,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "n_moeda = 4 #num lancamentos\n",
-    "k_moeda = 2 #  quantidade coroa desejada\n",
-    "p_moeda = 1 / 2 #probabilidade\n"
+    "p_moeda = 1 / 2 #probabilidade\n",
+    "k_moeda = 2 #  quantidade coroa desejada\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(0.9453125)"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "binom.sf(2, n_moeda, p_moeda) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.37695312\n"
+      "Nos  lançamenos, a probabilidade é o resultado ser coroa é de 37.5%\n"
      ]
     }
    ],
    "source": [
-    "prob_moeda =binom.cdf(4, n_moeda, p_moeda) \n",
-    "print(f'{prob_moeda:.8f}')"
+    "result = binom.pmf(k_moeda, n_moeda, p_moeda) * 100\n",
+    "print(f'Nos  lançamenos, a probabilidade é o resultado ser coroa é de {result}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3125\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob_moeda =binom.sf(2, n_moeda, p_moeda) \n",
+    "print(f'{prob_moeda}')"
    ]
   },
   {
@@ -1214,47 +1215,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.22477320212874055)"
+       "np.float64(0.22477320212874052)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "n_dado = 10 #num lancamentos\n",
-    "k_dado = 3 #  quantidade coroa desejada\n",
     "p_dado = 1 / 6 #probabilidade\n",
+    "k_dado = 3 #  quantidade coroa desejada\n",
     "\n",
-    "prob_dado =binom.sf(k_dado - 1, n_dado, p_dado) #REVISAR ISSO AQUI\n",
-    "prob_dado\n"
+    "1-binom.cdf(k_dado -1 , n_dado, p_dado)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.float64(2.2477320212874057)"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade do dado cair com o número 5 voltado para cima nos 10 lançamentos é de: 22.48 %\n"
+     ]
     }
    ],
    "source": [
-    "10 * prob_dado"
+    "result = binom.sf(2, n_dado, p_dado) * 100\n",
+    "print(f'A probabilidade do dado cair com o número 5 voltado para cima nos 10 lançamentos é de: {result:.2f} %')"
    ]
   },
   {
@@ -1289,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 76,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1377,34 +1375,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "colab_type": "code",
-    "id": "Tg53uGL4G3DA",
-    "outputId": "cf68634d-68fd-41c5-a9a1-98c5ead8b548"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1/2"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -1459,10 +1429,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade é uma média de 5.66 familias terem olhos 2 filhos de olhos azuis\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = .22\n",
+    "n = 3\n",
+    "k = 2\n",
+    "\n",
+    "result = binom.pmf(k, n, p) \n",
+    "\n",
+    "media = result * 50\n",
+    "media\n",
+    "print(f\"A probabilidade é uma média de {media:.2f} familias terem olhos 2 filhos de olhos azuis\")"
+   ]
   },
   {
    "cell_type": "markdown",
