--- a/estatistica_2/Curso_de_Estatística_Parte_2.ipynb
+++ b/estatistica_2/Curso_de_Estatística_Parte_2.ipynb
@@ -1408,10 +1408,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.05164885353175814)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import poisson\n",
+    "\n",
+    "\n",
+    "media = 20\n",
+    "k = 15\n",
+    "poisson.pmf(k, media)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1627,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1638,7 +1656,9 @@
     "outputId": "5f93f4cb-eef7-459d-836c-eb825cf3f1d5"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "ocorrencias_hora = 20"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1652,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1663,7 +1683,9 @@
     "outputId": "70e860fe-353f-43ba-98e9-0976282de023"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "k = 15"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1722,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1732,8 +1754,21 @@
     "id": "sNw4oCAyG3Dk",
     "outputId": "21ded08e-1fc3-4315-c608-9c016af07e86"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.05164885353175814)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poisson.pmf(k, ocorrencias_hora)"
+   ]
   },
   {
    "cell_type": "markdown",
