--- a/estatistica_2/Estimativas.ipynb
+++ b/estatistica_2/Estimativas.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -202,7 +202,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import scipy\n",
+    "from scipy.stats import binom, norm\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -478,25 +478,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "lbDcyHPTKa9J"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Total de eventos\n",
+    "k = 7\n",
+    "\n",
+    "# Total de ensaior\n",
+    "n = 10\n",
+    "\n",
+    "# probabilidade de sucesso\n",
+    "p = 0.70\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "0_4L_QOnKa9L"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade e de: 0.26682793%\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = binom.pmf(k, n, p)\n",
+    "\n",
+    "print(f'A probabilidade e de: {probabilidade:.8f}%')"
+   ]
   },
   {
    "cell_type": "code",
@@ -554,14 +575,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "F27eIYXzKa9T"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "375"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media = n * p\n",
+    "n = media / p\n",
+    "\n",
+    "n = 100 / probabilidade\n",
+    "n = int(n.round())\n",
+    "n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -628,36 +667,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "_HxUH0AhKa9X"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29042     480\n",
+       "62672     250\n",
+       "29973     788\n",
+       "22428    1680\n",
+       "55145    2500\n",
+       "         ... \n",
+       "50497    3400\n",
+       "3668      780\n",
+       "4872     1000\n",
+       "38670    1000\n",
+       "71730     600\n",
+       "Name: Renda, Length: 200, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = dados.Renda.sample(n= 200, random_state=101)\n",
+    "dataset "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "fJBYID7pKa9Z"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1964.205)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "BXkTyV07Ka9c"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3139.8855167452093)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.std()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -678,7 +768,12 @@
     "id": "daBvAiqbKa9g"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "media_amostra = dataset.mean()\n",
+    "std_amostra = dataset.std()\n",
+    "recursos = 150000\n",
+    "custo_entrevista = 100"
+   ]
   },
   {
    "cell_type": "markdown",
